new_isa_tests/test_fsqrt/test_fsqrt.align.err
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_call_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_fsqrt_instruction 
Parsing Exception: test_fsqrt.mcode:29:12: expecting LPAREN, found '$r1'
Parsing Exception: test_fsqrt.mcode:30:1: expecting RUINTEGER, found ';'
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
Error: Register 2 multiply written in bundle 0
Error: Register 2 multiply written in bundle 0
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_fsqrt_instruction 
Parsing Exception: test_fsqrt.mcode:37:12: expecting LPAREN, found '$r3'
Parsing Exception: test_fsqrt.mcode:38:1: expecting RUINTEGER, found ';'
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
Error: Register 4 multiply written in bundle 0
Error: Register 4 multiply written in bundle 0
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_cast_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_cast_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_branch_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_return_instruction
Info: finished parsing file test_fsqrt.mcode
Info:  Bundle id=0 addr=0 pad amount 0
Info:  Bundle id=1 addr=2 pad amount 0
Info: Adding pad bundles to cover size 4
Info: added pad bundle pad_4__0 with size 4
Info:  Bundle id=2 addr=4 pad amount 4
Info:  Bundle id=3 addr=10 pad amount 0
Info: Adding pad bundles to cover size 7
Info: added pad bundle pad_1__2 with size 1
Info: added pad bundle pad_2__4 with size 2
Info: added pad bundle pad_4__6 with size 4
Info:  Bundle id=4 addr=11 pad amount 7
Info:  Bundle id=5 addr=20 pad amount 0
Info:  Bundle id=6 addr=28 pad amount 0
Info:  Bundle id=7 addr=30 pad amount 0
Info:  Bundle id=8 addr=38 pad amount 0
Info:  Bundle id=9 addr=40 pad amount 0
Info:  Bundle id=10 addr=48 pad amount 0
Info:  Bundle id=11 addr=50 pad amount 0
Info:  Bundle id=12 addr=58 pad amount 0
Info: Adding pad bundles to cover size 7
Info: added pad bundle pad_1__8 with size 1
Info: added pad bundle pad_2__10 with size 2
Info: added pad bundle pad_4__12 with size 4
Info:  Bundle id=13 addr=59 pad amount 7
